song play & mrsong play & stop song

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -30,7 +30,7 @@
         </activity>
 
         <activity
-            android:name="com.example.result.ResultActivity"
+            android:name=".ResultActivity"
             android:exported="false">
             <meta-data
                 android:name="android.app.lib_name"
